src/graph/snapshots/hopr_api__graph__function__tests__forward_last_edge_differs_from_return_last_edge.snap
---
source: src/graph/function.rs
expression: "Comparison\n{\n    observations: obs, forward_last_edge_value: fwd_cost,\n    return_last_edge_value: ret_cost,\n}"
---
observations:
  immediate: ~
  intermediate:
    balance: "1000"
    score: 0.95
forward_last_edge_value: 0.95
return_last_edge_value: -1
